# hotprices-au-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: scrape-groceries.yml  scrape-test.yml  security-audit.yml
resources/test/coles/: ad.json  empty_search_results.json  page_1.json  product.json
resources/test/coles/index/: index_good.html
resources/test/coles/search_results/: ad.json  empty_brand.json  missing_price.json  product.json
resources/test/latest-canonical/: one-product.json
resources/test/legacy/coles/: one-product-new-price.json  one-product.json
resources/test/snapshot/coles/: one-product-new-price.json  one-product.json
resources/test/woolies/: categories.json  categories.json.old
resources/test/woolies/categories/: missing-price.json  one-product.json  unit-from-cup.json
src/: analysis.rs  cache.rs  category.rs  conversion.rs  date.rs  errors.rs  lib.rs  main.rs  product.rs  retry.rs  storage.rs  stores.rs  sync.rs  unit.rs
src/stores/: coles.rs  woolies.rs
src/stores/coles/: category.rs  http.rs  product.rs
src/stores/woolies/: category.rs  http.rs  product.rs
